--- a/README.org
+++ b/README.org
@@ -23,3 +23,6 @@ be defined in from a table and the table will be transformed to [[https://github
 <link href="path/to/prism.css" rel="stylesheet" />
 <script src="path/to/prism.js"></script>
 #+end_src
+
+Checkout out
+https://highlightjs.org/usage/
