--- a/fsm.org
+++ b/fsm.org
@@ -2,11 +2,19 @@
 #+author: calle
 #+title: FSM
 #+filetags: elm programming language web
-#+HTML_HEAD: <link href="extra/prism.css" rel="stylesheet" />
-#+HTML_HEAD: <script src="extra/prism.js"></script>
+
+#+HTML_HEAD:  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+#+HTML_HEAD: <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+#+HTML_HEAD: <script>hljs.highlightAll();</script>
+# #+HTML_HEAD: <link href="extra/prism.css" rel="stylesheet" />
+
+# #+HTML_HEAD: <link href="extra/style.css" rel="stylesheet" />
+# #+HTML_HEAD: <script src="extra/prism.js"></script>
+
 
 
 #+begin_export html
+
   <div id="elm-app"></div>
 
 
@@ -16,4 +24,5 @@
         node: document.getElementById("elm-app")
       });
     </script>
+
 #+end_export
